test/spec_vectors/simd_i16x8_arith2/fail/module_13.wat
(module (func $i16x8.max_s-1st-arg-empty (result v128) (i16x8.max_s (v128.const i16x8 0 0 0 0 0 0 0 0))))